--- a/Bitcoin_Proj.ipynb
+++ b/Bitcoin_Proj.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "7a09d711",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +24,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6b62d855",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +223,7 @@
     "def dateparse (time_in_secs):\n",
     "    return pytz.utc.localize(datetime.datetime.fromtimestamp(float(time_in_secs)))\n",
     "\n",
-    "bitcoin1 = pd.read_csv(r\"C:\\Users\\louisaliparisa\\Downloads\\archive\\bitstampUSD_1-min_data_2012-01-01_to_2021-03-31.csv\", parse_dates=[0], date_parser=dateparse)\n",
+    "bitcoin1 = pd.read_csv(r\"C:\\Users\\anku_\\Downloads\\archive\\bitstampUSD_1-min_data_2012-01-01_to_2021-03-31.csv\", parse_dates=[0], date_parser=dateparse)\n",
     "\n",
     "\n",
     "bitcoin1"
@@ -234,7 +232,6 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "7e57a721",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +435,6 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "8228d8e6",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +638,6 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "332fc269",
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +841,6 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "61f90306",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +850,6 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "5de18b25",
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +961,6 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "3008a852",
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +984,6 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "aa7b70ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +993,6 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "96e8d0cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1010,6 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "d4571edd",
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1137,6 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "da6f574e",
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1243,6 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "ff5e5955",
    "metadata": {
     "scrolled": true
    },
@@ -1377,7 +1364,6 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "839a45f9",
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1490,6 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "d4b6f48d",
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1596,6 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "a8034b81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1621,7 +1605,6 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "b5d0ef46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1631,7 +1614,6 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "11011520",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1623,6 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "3bb24590",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1651,7 +1632,6 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "44de3ae7",
    "metadata": {},
    "outputs": [
     {
@@ -1672,7 +1652,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c4a92ab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1694,7 +1673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
