Update and rename Bitcoin_Proj.ipynb to Bitcoin_LR.ipynb

--- a/Bitcoin_LR.ipynb
+++ b/Bitcoin_LR.ipynb
@@ -223,7 +223,7 @@
     "def dateparse (time_in_secs):\n",
     "    return pytz.utc.localize(datetime.datetime.fromtimestamp(float(time_in_secs)))\n",
     "\n",
-    "bitcoin1 = pd.read_csv(r\"C:\\Users\\anku_\\Downloads\\archive\\bitstampUSD_1-min_data_2012-01-01_to_2021-03-31.csv\", parse_dates=[0], date_parser=dateparse)\n",
+    "bitcoin1 = pd.read_csv(r\"C:\\Users\\louisaliparisa\\Downloads\\archive\\bitstampUSD_1-min_data_2012-01-01_to_2021-03-31.csv\", parse_dates=[0], date_parser=dateparse)\n",
     "\n",
     "\n",
     "bitcoin1"
